<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_form">

    <ImageView
        android:id="@+id/login_logo_img"
        android:layout_width="200dp"
        android:layout_height="57dp"
        android:src="@drawable/logo_senai"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/login_title"
        style="@style/TextViewTitles"
        android:text="@string/login_title"
        app:layout_constraintTop_toBottomOf="@id/login_logo_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <View
        android:id="@+id/View_login_container"
        style="@style/ContainerComponents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title"/>

    <EditText
        android:id="@+id/editText_login_user"
        style="@style/Edit_Text"
        android:inputType="textEmailAddress"
        android:hint="@string/login_userHint"
        android:drawableRight="@drawable/email_icon"
        app:layout_constraintEnd_toStartOf="@id/View_login_container"
        app:layout_constraintEnd_toEndOf="@id/View_login_container"
        app:layout_constraintTop_toTopOf="@id/View_login_container"
        android:maxLength="35"/>

    <EditText
        android:id="@+id/editText_login_pswd"
        style="@style/Edit_Text"
        android:hint="@string/login_passwordHint"
        android:inputType="numberPassword"
        android:drawableRight="@drawable/login_password_icon"
        app:layout_constraintEnd_toStartOf="@id/View_login_container"
        app:layout_constraintEnd_toEndOf="@id/View_login_container"
        app:layout_constraintTop_toBottomOf="@id/editText_login_user"
        android:maxLength="6"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Button"
        android:id="@+id/Button_login_singin"
        android:text="@string/login_button_singin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_pswd"/>

    <TextView
        android:id="@+id/TextView_login_forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgetpass"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="@id/View_login_container"
        app:layout_constraintStart_toStartOf="@id/View_login_container"
        app:layout_constraintTop_toBottomOf="@+id/Button_login_singin"/>

    <ProgressBar
        style="@style/progress_bar"
        android:indeterminateTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/View_login_container"
        android:id="@+id/login_progressbar"
        android:visibility="invisible"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_progressbar"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/TextView_login_singup"
        android:text="@string/login_singup"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>